--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "./",
+  "homepage": "https://robin3010.github.io/dog_food_online_store/",
   "dependencies": {
     "@tanstack/react-query": "^4.22.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "clsx": "^1.2.1",
     "formik": "^2.2.9",
+    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.2",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "browserslist": {
     "production": [
